server/kubernetes/mqttimage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mqttimage
  name: mqttimage
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mqttimage
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/coffee_net: "true"
        io.kompose.service: mqttimage
    spec:
      containers:
      - image: stifstof/coffeemqttserver:latest
        imagePullPolicy: ""
        name: coffee-mqttcontainer
        ports:
        - containerPort: 1883
        - containerPort: 5000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
