server/kubernetes/sqlimage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sqlimage
  name: sqlimage
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sqlimage
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/coffee_net: "true"
        io.kompose.service: sqlimage
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: root
        image: stifstof/coffeesql:latest
        imagePullPolicy: ""
        name: coffee-sqlcontainer
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: coffee-datavolume
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: coffee-datavolume
        persistentVolumeClaim:
          claimName: coffee-datavolume
status: {}
