server/kubernetes/mqttimage-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mqttimage
  name: mqttimage
spec:
  ports:
  - name: "1883"
    port: 1883
    targetPort: 1883
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    io.kompose.service: mqttimage
status:
  loadBalancer: {}
