server/kubernetes/coffee_net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: coffee-net
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/coffee-net: "true"
  podSelector:
    matchLabels:
      io.kompose.network/coffee-net: "true"
